# DeskChan2

./: .gitignore  CMakeLists.txt  README.md  clean.sh  make.sh  rebuild.sh  run.sh
cmake-modules/: WinDeployQt.cmake
core/: CMakeLists.txt  DCCommon.h  DCCorePlugin.cpp  DCCorePlugin.h  DCExternalPlugin.cpp  DCExternalPlugin.h  DCPlugin.cpp  DCPlugin.h  DCPluginManager.cpp  DCPluginManager.h  libguisupport.cpp  libmain.cpp  main.cpp
plugins/: CMakeLists.txt
plugins/gui/: CMakeLists.txt  CharacterWidget.cpp  CharacterWidget.h  Plugin.cpp  Plugin.h  QMLPluginProxy.cpp  QMLPluginProxy.h  SettingsDialog.cpp  SettingsDialog.h
plugins/python_support/: CMakeLists.txt  Plugin.cpp  Plugin.h  PythonPlugin.cpp  PythonPlugin.h  package-installer.py
plugins/random_phrases/: CMakeLists.txt  character_options.qml  phrases.json  random_phrases.cmd  random_phrases.py
plugins/random_phrases/deskchan/: PluginInterface.py
