cmake_minimum_required (VERSION 3.6)
project(DeskChan)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/cmake-modules)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

find_package(Qt5Core REQUIRED)

add_subdirectory(core)
add_subdirectory(plugins)

if(WIN32)
	include(WinDeployQt)
	WinDeployQt(
			TARGET ${PROJECT_NAME} COMPILER_RUNTIME
			INCLUDE_MODULES Core Gui Widgets Network Quick Qml QuickWidgets
	)
	install(
			DIRECTORY ${CMAKE_BINARY_DIR}/
			DESTINATION ${CMAKE_INSTALL_PREFIX}
			FILES_MATCHING PATTERN "*.dll"
	)
	install(
			DIRECTORY ${CMAKE_BINARY_DIR}/
			DESTINATION ${CMAKE_INSTALL_PREFIX}
			FILES_MATCHING PATTERN "*.qml"
	)
	install(
			DIRECTORY ${CMAKE_BINARY_DIR}/
			DESTINATION ${CMAKE_INSTALL_PREFIX}
			FILES_MATCHING PATTERN "qmldir"
	)
	install(
			DIRECTORY ${CMAKE_BINARY_DIR}/
			DESTINATION ${CMAKE_INSTALL_PREFIX}
			FILES_MATCHING PATTERN "plugins.qmltypes"
	)
	install(
			DIRECTORY ${CMAKE_BINARY_DIR}/
			DESTINATION ${CMAKE_INSTALL_PREFIX}
			FILES_MATCHING PATTERN "*.qm"
	)
endif()
